[gd_scene load_steps=16 format=3 uid="uid://1crn1je5pbbx"]

[ext_resource type="Script" path="res://Vehicle.gd" id="1_clah6"]
[ext_resource type="Texture2D" uid="uid://50umhej7xqqc" path="res://spritesheet_vehicles.png" id="1_fsrh5"]
[ext_resource type="Script" path="res://RayTrafficLightDetector.gd" id="3_igt17"]
[ext_resource type="Script" path="res://RayCarDetector.gd" id="3_s5fk1"]
[ext_resource type="Script" path="res://Dashboard.gd" id="5_rpq7f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjx2c"]
size = Vector2(2.75, 2.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2kpo"]
size = Vector2(14, 13)

[sub_resource type="LabelSettings" id="LabelSettings_kr1a7"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_w27h0"]
font_size = 7

[sub_resource type="Animation" id="Animation_jbn8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y0x50"]
resource_name = "fade_to_red"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.937255, 0.0705882, 0.0431373, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtu3j"]
_data = {
"RESET": SubResource("Animation_jbn8h"),
"fade_to_red": SubResource("Animation_y0x50")
}

[sub_resource type="Animation" id="Animation_6nasf"]
resource_name = "scaling_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_14v1i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6il6"]
_data = {
"RESET": SubResource("Animation_14v1i"),
"scaling_up": SubResource("Animation_6nasf")
}

[node name="Car" type="CharacterBody2D"]
collision_layer = 10
collision_mask = 9
script = ExtResource("1_clah6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fsrh5")
region_enabled = true
region_rect = Rect2(85, 102, 15, 15)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="PathCollider" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_xjx2c")

[node name="CarBody" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="BodyCollider" type="CollisionShape2D" parent="CarBody"]
shape = SubResource("RectangleShape2D_a2kpo")
debug_color = Color(0.796078, 0.223529, 0.878431, 0.419608)

[node name="RayCarDetector" type="RayCast2D" parent="."]
target_position = Vector2(40, 2.08165e-12)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("3_s5fk1")

[node name="RayTrafficLightDetector" type="RayCast2D" parent="."]
target_position = Vector2(30, 2.08165e-12)
collide_with_areas = true
collide_with_bodies = false
script = ExtResource("3_igt17")

[node name="Dash" type="Panel" parent="."]
visible = false
z_index = 10
texture_filter = 2
offset_left = 7.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = -10.0
script = ExtResource("5_rpq7f")

[node name="Speed" type="Label" parent="Dash"]
layout_mode = 0
offset_left = 3.0
offset_right = 28.0
offset_bottom = 13.0
text = "120"
label_settings = SubResource("LabelSettings_kr1a7")

[node name="Factor" type="Label" parent="Dash"]
layout_mode = 0
offset_left = 4.0
offset_top = 9.0
offset_right = 24.0
offset_bottom = 21.0
text = "888"
label_settings = SubResource("LabelSettings_w27h0")

[node name="TurningRedAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jtu3j")
}

[node name="ScalingUpAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6il6")
}
autoplay = "scaling_up"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="CarBody" to="." method="_on_car_body_area_entered"]
[connection signal="animation_finished" from="ScalingUpAnimation" to="." method="_on_scaling_up_animation_animation_finished"]
